--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: icesVocab
 Title: ICES Vocabularies Database Web Services
-Version: 1.3.0
+Version: 1.3.1
 Authors@R: c(person("Colin", "Millar", email = "colin.millar@ices.dk",
   role = c("aut","cre")), person("Arni", "Magnusson", role = "aut"))
-Imports: icesConnect,
+Imports: icesConnect (>= 1.1.4),
           memoise,
           cachem,
           rlang,
@@ -12,7 +12,8 @@ Description: R interface to access the Vocabularies REST API of the ICES
   (International Council for the Exploration of the Sea) Vocabularies database
   <https://vocab.ices.dk/services/>.
 License: GPL-3
-URL: https://vocab.ices.dk/services/api/swagger/index.html
+URL: https://vocab.ices.dk/services/api/swagger/index.html, https://github.com/ices-tools-prod/icesVocab
 RoxygenNote: 7.3.2
 Encoding: UTF-8
 BugReports: https://github.com/ices-tools-prod/icesVocab/issues
+Language: en-GB
